[tool.poetry]
name = "farmoutbetabot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
python-dotenv = "^0.15.0"
discord = "^1.0.1"
flask = "^1.1.2"
discord-components = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
